<resources>
    <!-- onboarding Activity -->
    <string name="onboarding_title">앱 소개</string>
    <string name="onboarding_privacy_policy">이 서비스의 <u>개인정보처리방침</u> 확인하기</string>

    <!-- Main Activity -->
    <string name="main_title">홈 화면</string>

    <!-- layout/toolbar.xml -->
    <string name="toolbar_skip">건너뛰기</string>
    <string name="toolbar_back_description">뒤로가기</string>
    <string name="toolbar_close_description">현재 창 닫기</string>

    <!-- f_result_cal -->
    <string name="result_cal_prefix">총 칼로리는</string>
    <string name="result_cal_suffix">입니다.</string>

    <!-- f_result_alg_caution -->
    <string name="alg_caution_text1">님. 주의하세요</string>
    <string name="alg_caution_text2">이 식품에 OO가 함유되어있어요</string>

    <!-- f_result_alg -->
    <string name="algResultText">식품 알레르기 정보</string>

    <!-- description page -->
    <string name="desciption_result_image">촬영한 식품의 이미지입니다.</string>
    <string name="description_result_scrollbar">식품 분석 결과 화면입니다. 스크롤하여 정보를 확인할 수 있습니다.</string>
    <string name="result_nutri_pie_chart_text1">분석한 식품의 영양 정보</string>
    <string name="result_nutri_pie_chart_text2">이 식품의 영양정보는 대략적인 값으로 참고용입니다</string>
    <string name="result_text1">전체 설명 듣기</string>
    <string name="result_text2">등록하기</string>
    <string name="result_fail_text">알레르기 인식에 실패했어요.</string>
    <string name="result_title">식품 분석 결과</string>

    <!-- app config -->
    <string name="app_name_eng">BeYourEyes</string>
    <string name="app_name_splash">당신의 안(眼)식(食)</string>
    <string name="app_name_kor">당신의 안식</string>

    <!-- navigation/mobile_navigation.xml -->
    <string name="title_home">HOME</string>
    <string name="title_user">내 정보</string>
    <string name="title_food">식품 분석</string>

    <!-- layout/fragment_assign.xml -->
    <string name="assign_toolbar">맞춤설계</string>
    <string name="assign_step1">STEP 1</string>
    <string name="assign_step2">STEP 2</string>
    <string name="assign_step3">STEP 3</string>
    <string name="assign_step4">STEP 4</string>
    <string name="assign_step5">STEP 5</string>
    <string name="assign_step1_question">고객님을 어떻게\n불러드리면 좋을까요?</string>
    <string name="assign_step2_question">고객님의 성별은 무엇인가요?</string>
    <string name="assign_step3_question">고객님의 출생연도는\n몇년인가요?</string>
    <string name="assign_step4_question">갖고있는 질환 정보를\n알려주세요.</string>
    <string name="assign_step5_question">"갖고있는 알레르기 정보를\n알려주세요."</string>
    <string name="assign_name_placeholder">닉네임 입력</string>
    <string name="assign_name_check_ok">중복 확인을 진행해주세요.</string>
    <string name="assign_name_check_no">누군가가 이미 사용 중입니다.</string>
    <string name="assign_female">여성</string>
    <string name="assign_male">남성</string>
    <string name="assign_birth_year">태어난 년도</string>
    <string name="assign_birth_month">월</string>
    <string name="assign_birth_day">일</string>
    <string name="assign_disease_no">없음</string>
    <string name="assign_disease_diabetes">당뇨</string>
    <string name="assign_disease_HighBloodPressure">고혈압</string>
    <string name="assign_disease_hyperlipidemia">고지혈증</string>
    <string name="assign_button_next">다음으로</string> <!-- 중복 확인 필요!! -->

    <!-- layout/fragment_home.xml -->
    <string name="home_overview_msg1">오늘 필요 에너지량보다</string>
    <string name="home_overview_msg2_when_less">적습니다</string>
    <string name="home_overview_msg2_when_more">많습니다</string>
    <string name="home_overview_kcal_unit">Kcal</string>
    <string name="home_advice_when_less">더 든든하게 식사하세요!</string>
    <string name="home_advice_when_good">목표를 충족했네요! 잘 하셨어요🎉</string>
    <string name="home_advice_when_more">과다 섭취에 주의하세요!</string>
    <string name="home_today_kcal_label">님의 오늘 칼로리 섭취량</string>
    <string name="home_kcal_unit">kcal</string>
    <string name="home_slash">/</string>
    <string name="home_today_nutri_label">오늘의 상세 영양소 섭취량</string>

    <!-- layout/fragment_my_info.xml -->
    <string name="my_info_toolbar">내 정보</string>
    <string name="my_info_greeting1">님</string>
    <string name="my_info_greeting2">건강한 하루 보내세요!</string>
    <string name="my_info_edit_profile">정보 수정</string>
    <string name="my_info_edit">수정</string>
    <string name="my_info_disease_view_label">내 질환</string>
    <string name="my_info_allergy_view_label">내가 가진 알레르기 정보</string>
    <string name="my_info_history_view_label">과거에 분석한 영양 기록</string>
    <string name="my_info_history_view_intro">과거에 분석했던 식품들을 모아볼 수 있어요</string>
    <string name="my_info_cs_view_label">고객지원</string>
    <string name="my_info_cs_share">앱 공유하기</string>
    <string name="my_info_cs_review">앱 스토어 리뷰 남기기</string>
    <string name="my_info_cs_contact">고객센터 문의하기</string>
    <string name="my_info_cs_privacy_policy">개인정보 처리 방침</string>
    <string name="my_info_cs_sign_out">서비스 탈퇴하기</string>
    <string name="my_info_app_version_label">앱 버전</string>

    <string name="my_info_profile_image_description">내 프로필 사진</string>
    <string name="my_info_disease_edit_description">내 질환 수정</string>
    <string name="my_info_allergy_edit_description">알레르기 정보 수정</string>
    <string name="my_info_history_edit_description">영양 기록 수정</string>

    <!--eat page-->
    <string name="result_eat_text_1">얼마나 드셨나요?</string>
    <string name="result_eat_text_2">섭취하신 식품의 양을 선택해주세요.</string>
    <string name="result_eat_button_25">1/4 섭취</string>
    <string name="result_eat_button_50">1/2 섭취</string>
    <string name="result_eat_button_75">3/4 섭취</string>
    <string name="result_eat_button_100">1 섭취</string>
    <string name="result_eat_button_100_description">전체 섭취</string>
    <string name="result_eat_dialog_text">섭취량 입력이 완료되었습니다.</string>
    <string name="result_eat_dialog_button">확인하기</string>
    <string name="result_nutri_bar_chart_text1">이 식품의 상세 영양성분 정보</string>

    <!-- 영양소명 -->
    <string name="nutri_na">나트륨</string>
    <string name="nutri_carb">탄수화물</string>
    <string name="nutri_sugar">당류</string>
    <string name="nutri_fat">지방</string>
    <string name="nutri_satFat">포화지방</string>
    <string name="nutri_chole">콜레스테롤</string>
    <string name="nutri_protein">단백질</string>

    <!-- 알레르기 유발 성분 -->
    <string name="allergy_none">없음</string>
    <string name="allergy_buckwheat">메밀</string>
    <string name="allergy_wheat">밀</string>
    <string name="allergy_bean">대두</string>
    <string name="allergy_peanut">땅콩</string>
    <string name="allergy_walnut">호두</string>
    <string name="allergy_pinenut">잣</string>
    <string name="allergy_acid">아황산</string>
    <string name="allergy_peach">복숭아</string>
    <string name="allergy_tomato">토마토</string>
    <string name="assign_start">시작하기</string>

    <!-- 확인하기 button -->
    <string name="okaybutton">확인하기</string>
    <string name="gobutton">시작하기</string>
    <string name="nextbutton">다음으로</string>

    <!--  camera_fail  -->
    <string name="camera_fail_main_text">사진이 너무 흐리게 나왔습니다.</string>
    <string name="camera_fail_sub_text">초점을 잘 맞춰서 촬영해주세요.</string>
    <string name="ocr_fail_main_text">글자 인식에 실패했습니다.</string>
    <string name="ocr_fail_sub_text">글자가 잘 보이고 전체 내용을\n다 담을 수 있도록 촬영해주세요.</string>

    <!--  food_caution  -->
    <string name="food_caution_title">식품 분석 유의사항</string>
    <string name="food_caution_number_text_1">01</string>
    <string name="food_caution_number_text_2">02</string>
    <string name="food_caution_number_text_3">03</string>
    <string name="food_caution_text_1">물체를 사물과 잘 구별되는 배경에 \n놓고 촬영해주세요.</string>
    <string name="food_caution_text_2">초점을 잘 맞춰서 촬영해주세요.</string>
    <string name="food_caution_text_3">글씨가 잘 보이도록 가까이 찍되,\n전체 내용을 다 담을 수 있도록\n촬영해주세요.</string>
    <string name="food_caution_text_1_description">물체를 사물과 잘 구별되는 배경에 놓고 촬영해주세요.</string>
    <string name="food_caution_text_2_description">초점을 잘 맞춰서 촬영해주세요.</string>
    <string name="food_caution_text_3_description">글씨가 잘 보이도록 가까이 찍되, 전체 내용을 다아 담을 수 있도록 촬영해주세요.</string>

    <!--  loading  -->
    <string name="loading_maintext">사진을 분석 중입니다.</string>
    <string name="loading_subtext">잠시만 기다려주세요.</string>
    <string name="loading_percent">38%</string>

    <!--  my_past_detail  -->
    <string name="my_past_detail_title">과거 기록</string>
    <string name="my_past_detail_date">2024.06.24 (수)</string>
    <string name="my_past_detail_time">14:45 PM</string>
    <string name="my_past_detail_image_description">분석 당시 촬영한 식품 표시</string>

    <string name="appName">당신의 안(眼)식(食)</string>
    <string name="your_web_client_id">39610226410-ole4b27oudmh6098eko824kldgn1rodu.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Temporary Strings (개발 중 확인용 임시 텍스트) -->
    <string name="tmp_toolbar">화면명</string>

    <string name="tmp_result_cal">170kcal</string>

    <string name="tmp_home_kcal_diff_value">477</string>
    <string name="tmp_home_kcal_value">1423</string>
    <string name="tmp_home_kcal_daily_value">2000</string>

    <string name="tmp_my_info_nickname">SSO</string>
    <string name="tmp_my_info_history_cnt">0</string>
    <string name="tmp_my_info_app_version_value">version 5.0</string>

    <string name="tmp_intake_bar_percent_value">140%</string>
    <string name="tmp_intake_bar_mg_value">420mg</string>
    <string name="tmp_intake_bar_daily_value">일일 권장량 300mg</string>

    <string name="tmp_food_history_title">2024.11.11</string>
    <string name="tmp_food_history_kcal">170kcal</string>
    <string name="assign_dismiss">취소하기</string>
    <string name="splash_text1">더 쉬운</string>
    <string name="splash_text2">식품정보</string>

</resources>