<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_result_fragment_background_white_stroke_10"
    android:orientation="vertical"
    android:padding="17dp"
    tools:context=".ui.foodDetail.ResultNutriBarFragment">

    <TextView
        android:id="@+id/result_bar_chart_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wanted_sans_extra_bold"
        android:text="@string/result_nutri_bar_chart_text1"
        android:textColor="@color/gray_950"
        android:textSize="18sp" />

    <com.dna.beyoureyes.ui.foodDetail.FoodNutrientBar
        android:id="@+id/natriumBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:nutritionName="@string/nutri_na"
        app:massText="150mg"
        app:dailyValueText="2300mg"
        app:curValue="150"
        app:maxValue="2300" />

    <com.dna.beyoureyes.ui.foodDetail.FoodNutrientBar
        android:id="@+id/carbsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:nutritionName="@string/nutri_carb"
        app:massText="18.2g"
        app:dailyValueText="130g"
        app:curValue="18200"
        app:maxValue="130000" />

    <com.dna.beyoureyes.ui.foodDetail.FoodNutrientBar
        android:id="@+id/sugarBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:nutritionName="@string/nutri_sugar"
        app:massText="1.3g"
        app:dailyValueText="50g"
        app:curValue="1300"
        app:maxValue="50000" />

    <com.dna.beyoureyes.ui.foodDetail.FoodNutrientBar
        android:id="@+id/fatBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:nutritionName="@string/nutri_fat"
        app:massText="52g"
        app:dailyValueText="66g"
        app:curValue="52000"
        app:maxValue="66000" />

    <com.dna.beyoureyes.ui.foodDetail.FoodNutrientBar
        android:id="@+id/satFatBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:nutritionName="@string/nutri_satFat"
        app:massText="8g"
        app:dailyValueText="15g 이내"
        app:curValue="8000"
        app:maxValue="15000" />

    <com.dna.beyoureyes.ui.foodDetail.FoodNutrientBar
        android:id="@+id/cholesterolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:nutritionName="@string/nutri_chole"
        app:massText="0mg"
        app:dailyValueText="300mg 미만"
        app:curValue="0"
        app:maxValue="300" />

    <com.dna.beyoureyes.ui.foodDetail.FoodNutrientBar
        android:id="@+id/proteinBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:nutritionName="@string/nutri_protein"
        app:massText="0g"
        app:dailyValueText="55g"
        app:curValue="0"
        app:maxValue="55000" />

</LinearLayout>