<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_50">

    <com.dna.beyoureyes.ui.common.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/result_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipChildren="true"
        android:clipToPadding="false"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="true"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:clipToPadding="false">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/ImageCaptured"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/desciption_result_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_pasta" />

                <ImageView
                    android:id="@+id/ImageGradient"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:src="@drawable/gradient_layer_list_g50" />

            </FrameLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/wanted_sans_bold"
                android:text="@string/result_eat_text_1"
                android:textColor="@color/gray_950"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/wanted_sans_semi_bold"
                android:text="@string/result_eat_text_2"
                android:textColor="@color/gray_700"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/eat_result_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="28dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/button25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/eat_result_radio_selector"
                    android:button="@android:color/transparent"
                    android:text="@string/result_eat_button_25"
                    android:fontFamily="@font/wanted_sans_bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@drawable/eat_result_text_selector" />

                <RadioButton
                    android:id="@+id/button50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/eat_result_radio_selector"
                    android:button="@android:color/transparent"
                    android:text="@string/result_eat_button_50"
                    android:fontFamily="@font/wanted_sans_bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@drawable/eat_result_text_selector"
                    android:layout_marginTop="12dp" />

                <RadioButton
                    android:id="@+id/button75"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/eat_result_radio_selector"
                    android:button="@android:color/transparent"
                    android:text="@string/result_eat_button_75"
                    android:fontFamily="@font/wanted_sans_bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@drawable/eat_result_text_selector"
                    android:layout_marginTop="12dp" />

                <RadioButton
                    android:id="@+id/button100"
                    android:contentDescription="@string/result_eat_button_100_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/eat_result_radio_selector"
                    android:button="@android:color/transparent"
                    android:text="@string/result_eat_button_100"
                    android:fontFamily="@font/wanted_sans_bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@drawable/eat_result_text_selector"
                    android:layout_marginTop="12dp" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/result_button_eat"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_button_b500_100"
        android:fontFamily="@font/wanted_sans_bold"
        android:text="@string/result_text2"
        android:textColor="@color/blue_50"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.859"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
