<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- 홈 메뉴(HomeFragment 연결) -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dna.beyoureyes.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- 내 정보 메뉴(MyInfoFragment 연결) -->
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.dna.beyoureyes.ui.myInfo.MyInfoFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_my_info">
        <action
            android:id="@+id/action_myInfo_to_pastDetail"
            app:destination="@id/navigation_past_detail">
            <argument
                android:name="foodHistory"
                app:argType="com.dna.beyoureyes.data.model.FoodHistory" />
        </action>
    </fragment>

    <!-- 식품 분석 메뉴(FoodActivity 연결) -->
    <activity
        android:id="@+id/navigation_food"
        android:name="com.dna.beyoureyes.FoodActivity"
        android:label="@string/title_food"
        tools:layout="@layout/activity_food" />

    <!-- 과거 기록 Fragment -->
    <fragment
        android:id="@+id/navigation_past_detail"
        android:name="com.dna.beyoureyes.ui.myInfo.MyPastDetailFragment"
        android:label="@string/my_past_detail_title"
        tools:layout="@layout/fragment_my_past_detail">
        <argument
            android:name="foodHistory"
            app:argType="com.dna.beyoureyes.data.model.FoodHistory" />
    </fragment>

    <!-- 상세 영양성분 정보 Fragment -->
    <fragment
        android:id="@+id/nutri_bar_fragment"
        android:name="com.dna.beyoureyes.ui.foodDetail.ResultNutriBarFragment">
        <argument
            android:name="nutritionList"
            app:argType="com.dna.beyoureyes.data.model.NutritionWrapper[]" />
    </fragment>

    <!-- 식품 칼로리 정보 Fragment -->
    <fragment
        android:id="@+id/kcal_fragment"
        android:name="com.dna.beyoureyes.ui.foodDetail.ResultKcalFragment">
        <argument
            android:name="kcal"
            app:argType="integer" />
    </fragment>

</navigation>