<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_50"
    android:gravity="center"
    android:paddingVertical="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/assignAllergyChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:chipSpacingHorizontal="10dp"
        app:chipSpacingVertical="13dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_none"
            android:layout_width="98dp"
            android:layout_height="58dp"
            android:layout_marginBottom="60dp"
            android:text="@string/allergy_none"
            android:textAlignment="center"
            android:textAppearance="@style/chipText"
            app:chipMinTouchTargetSize="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_buckwheat"
            android:layout_width="98dp"
            android:layout_height="58dp"
            android:layout_marginBottom="60dp"
            android:text="@string/allergy_buckwheat"
            android:textAlignment="center"
            android:textAppearance="@style/chipText"
            android:visibility="gone"
            app:chipMinTouchTargetSize="0dp"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_wheat"
            android:layout_width="98dp"
            android:layout_height="58dp"
            android:layout_marginBottom="60dp"
            android:text="@string/allergy_wheat"
            android:textAlignment="center"
            android:textAppearance="@style/chipText"
            android:visibility="gone"
            app:chipMinTouchTargetSize="0dp"
            tools:visibility="visible" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_bean"
            android:layout_width="98dp"
            android:layout_height="58dp"
            android:layout_marginBottom="60dp"
            android:text="@string/allergy_bean"
            android:textAlignment="center"
            android:textAppearance="@style/chipText"
            android:visibility="gone"
            app:chipMinTouchTargetSize="0dp"
            tools:visibility="visible" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>