<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/kcalLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:importantForAccessibility="yes"
    android:orientation="vertical">

    <TextView
        android:id="@+id/kcalPreTextView"
        android:importantForAccessibility="no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_cal_prefix"
        android:fontFamily="@font/wanted_sans_semi_bold"
        android:textColor="@color/gray_950"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kcalTextView"
            android:importantForAccessibility="no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmp_result_cal"
            android:fontFamily="@font/wanted_sans_black"
            android:textColor="@color/gray_950"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/kcalSufTextView"
            android:importantForAccessibility="no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/result_cal_suffix"
            android:fontFamily="@font/wanted_sans_semi_bold"
            android:textColor="@color/gray_950"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>